2009-02-04  Carsten Dominik  <dominik@science.uva.nl>

	* org.el (org-return-follows-link): Revert setting
	`org-return-follows-link' to t by default.

2009-02-02  Carsten Dominik  <dominik@science.uva.nl>

	* org.el (org-cycle-global-at-bob): Fix typo.

	* org-jsinfo.el (org-infojs-handle-options): Fix typo in comment.

2009-02-02  Carsten Dominik  <carsten.dominik@gmail.com>

	* org.el (org-mode): Make dependence stuff work more reliably.
	(org-update-parent-todo-statistics): Fix bug with updating
	statistics cookie.
	(org-yank-adjusted-subtrees, org-return-follows-link)
	(org-use-fast-todo-selection, org-tags-column): New default
	setting for variables.

	* org-export-latex.el (org-export-latex-emphasis-alist): Use = and
	~ as verbatim delimiters, to avoid table bug.
	(org-export-latex-classes): Remove the a4paper option from the
	default styles.

	* org-exp.el (org-export-html-format-image): New argument
	PAR-OPEN, to fix XHTM validation bug.
	(org-export-as-html): Pass par-open to
	`org-export-html-format-image'.
	(org-export-html-footnotes-section): Use a more consistent id for
	footnotes.

	* org-agenda.el (org-agenda-sorting-strategy)
	(org-agenda-tags-column): New default setting for variables, based
	on a poll what typical uses use.
	(org-agenda-dim-blocked-tasks): Keep dimming blocked entries from
	setting the blocked tag.

2009-01-31  Carsten Dominik  <dominik@science.uva.nl>

	* org-agenda.el (org-agenda-dim-blocked-tasks): No tagging when
	only checking for blocks.

	* org-exp.el (org-export-html-footnotes-section): Make the div id consistent

	* org-export-latex.el (org-export-latex-classes): Remove
	paper size option from LaTeX classes.

2009-01-31  Carsten Dominik  <carsten.dominik@gmail.com>

	* org.el (org-enforce-todo-checkbox-dependencies): New option.
	(org-block-todo-from-checkboxes): New function.
	(org-todo): Make tripple prefix arg circumvent blocking.

2009-01-30  Glenn Morris  <rgm@gnu.org>
